# hdf5-static-linking-test

./: .gitmodules  CMakeLists.txt  README.md  log.txt
test/: CMakeLists.txt
test/source/: .test.hpp.swp  main.cpp  test.cpp  test.hpp
